Enhanced backend security and API functionality
- Implemented JWT token management including refresh-token functionality.
- Improved error handling in AuthController for better user feedback.
- Secured endpoints with role-based access control (ADMIN/CLIENT).
- Added unit and integration tests to validate authentication and authorization logic.
- Updated JwtRequestFilter to handle token exceptions and non-secured paths.
- Added Swagger documentation annotations to controllers and models.
- Enhanced DataInitializer to include more sample data for testing.